// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label Component can take a larger font size 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "Abel",
          "fontSize": 20,
          "margin": 0,
          "padding": 0,
        },
        Object {
          "color": "#036bfc",
        },
      ]
    }
  >
    Title
  </Text>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "Abel",
          "marginTop": -5,
          "padding": 0,
        },
        Object {
          "fontSize": 70,
        },
      ]
    }
  >
    Content
  </Text>
</View>
`;

exports[`Label Component will render a label with a title and content 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "Abel",
          "fontSize": 20,
          "margin": 0,
          "padding": 0,
        },
        Object {
          "color": "#036bfc",
        },
      ]
    }
  >
    Title
  </Text>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "Abel",
          "marginTop": -5,
          "padding": 0,
        },
        Object {
          "fontSize": 30,
        },
      ]
    }
  >
    Content
  </Text>
</View>
`;
